--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "bortelaget",
   "version": "1.0.0",
-  "main": "bortelaget-scripts.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "sass": "sass --watch src/scss:dist/css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^2.7.0"
+  },
   "devDependencies": {
+    "nodemon": "^3.0.3",
     "sass": "^1.84.0"
   }
 }
