--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,26 @@
     "routes": [
         {
             "src": "/api/weather",
-            "dest": "/server.js"
+            "dest": "/server.js",
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Methods": "GET, OPTIONS",
+                "Access-Control-Allow-Headers": "Content-Type, Accept"
+            }
         },
         {
             "src": "/icons/(.*)",
-            "dest": "/server.js"
+            "dest": "/server.js",
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
+        },
+        {
+            "src": "/(.*)\\.js$",
+            "headers": {
+                "Content-Type": "application/javascript",
+                "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 } 
