--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
         {
             "src": "server.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "*.js",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
@@ -25,6 +29,7 @@
         },
         {
             "src": "/(.*)\\.js$",
+            "dest": "/$1.js",
             "headers": {
                 "Content-Type": "application/javascript",
                 "Access-Control-Allow-Origin": "*"
