--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
         {
             "src": "server.js",
             "use": "@vercel/node"
-        },
-        {
-            "src": "public/**",
-            "use": "@vercel/static"
         }
     ],
     "routes": [
@@ -28,11 +24,11 @@
             }
         },
         {
-            "handle": "filesystem"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/server.js"
+            "src": "/(.*)\\.js$",
+            "headers": {
+                "Content-Type": "application/javascript",
+                "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 } 
